@@ -1,3 +1,4 @@
+$OpenBSD: ReadMe.NetBSD,v 1.1 1996/05/15 21:06:20 is Exp $
 $NetBSD: ReadMe.NetBSD,v 1.1 1996/05/15 21:06:20 is Exp $
 
 Copyright (c) 1996 Ignatios Souvatzis.  All rights reserved.
