@@ -1,4 +1,5 @@
 #
+# $OpenBSD: fnetbsd.S,v 1.2 1996/05/15 21:16:45 is Exp $
 # $NetBSD: fnetbsd.S,v 1.2 1996/05/15 21:16:45 is Exp $
 #
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
