@@ -1,4 +1,5 @@
 #
+# $OpenBSD: fplsp.doc,v 1.2 1996/05/15 19:47:35 is Exp $
 # $NetBSD: fplsp.doc,v 1.2 1996/05/15 19:47:35 is Exp $
 #
 
