@@ -1,4 +1,5 @@
 #
+# $OpenBSD: fpsp.sa,v 1.2 1996/05/15 19:48:25 is Exp $
 # $NetBSD: fpsp.sa,v 1.2 1996/05/15 19:48:25 is Exp $
 #
 
