@@ -1,4 +1,5 @@
 #
+# $OpenBSD: ftest.sa,v 1.2 1996/05/15 19:48:34 is Exp $
 # $NetBSD: ftest.sa,v 1.2 1996/05/15 19:48:34 is Exp $
 #
 
