@@ -1,4 +1,5 @@
 #
+# $OpenBSD: ilsp.doc,v 1.2 1996/05/15 19:48:36 is Exp $
 # $NetBSD: ilsp.doc,v 1.2 1996/05/15 19:48:36 is Exp $
 #
 
