@@ -1,4 +1,5 @@
 #
+# $OpenBSD: ilsp.sa,v 1.2 1996/05/15 19:48:39 is Exp $
 # $NetBSD: ilsp.sa,v 1.2 1996/05/15 19:48:39 is Exp $
 #
 
