@@ -1,4 +1,5 @@
 #
+# $OpenBSD: isp.doc,v 1.2 1996/05/15 19:48:44 is Exp $
 # $NetBSD: isp.doc,v 1.2 1996/05/15 19:48:44 is Exp $
 #
 
