@@ -1,4 +1,5 @@
 #
+# $OpenBSD: isp.sa,v 1.2 1996/05/15 19:48:51 is Exp $
 # $NetBSD: isp.sa,v 1.2 1996/05/15 19:48:51 is Exp $
 #
 
